--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
         <base href="/">
 </head>
     <body>
-      <div app-root>Loading...</div>
+      <div app-root></div>
     </body>
 </html>
