--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
 <html xmlns:og="http://ogp.me/ns#">
     <head>
-        <title>TWIC, The Social Learning Environmentfor B-Schools</title>
+        <title>TWIC, The Social Learning Environment for B-Schools</title>
         <meta property="og:title" content="TWIC, The Social Learning Environmentfor B-Schools" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://twicbythestudnet.com" />
         <meta property="og:image" content="https://twicbythestudnet.com/assets/images/Logo.svg" />
         <meta property="description" content="Engagement is the key in a digital environment
+        This is why we have designed a technology combining an intuitive 
+        Learning Management System with 21st-Century social networking features." />
+        <meta property="og:description" content="Engagement is the key in a digital environment
         This is why we have designed a technology combining an intuitive 
         Learning Management System with 21st-Century social networking features." />
         <meta property="og:locale" content="en_US" />
